# sleepydiscord-squirrel

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
